--- a/listings/templates/listings/footer.html
+++ b/listings/templates/listings/footer.html
@@ -8,13 +8,15 @@
       </div>
       <div class="col-md-4 col-12">
         <p><a href="{% url 'contact' %}">Contactez-nous !</a></p>
-        <p><a href="#">Suivez-nous !</a></p>
-        <p><a href="#">Rejoignez-nous !</a></p>
+        <p><a href="{% url 'contact' %}">Suivez-nous !</a></p>
+        <p><a href="{% url 'contact' %}">Rejoignez-nous !</a></p>
       </div>
       <div class="col-md-4 col-12">
-        <p> <a href="https://www.linkedin.com/in/saad-rafiqul-9a964220a/" class="text-decoration-none" data-bs-toggle="tooltip" data-bs-title="Tiktok"><i class="bi bi-linkedin"></i></a></p>
-        <p><a href="https://www.linkedin.com/in/saad-rafiqul-9a964220a/" class="text-decoration-none" data-bs-toggle="tooltip" data-bs-title="TikTok"><i class="bi bi-snapchat"></i></a></p>
-        <p><a href="https://www.linkedin.com/in/saad-rafiqul-9a964220a/" class="text-decoration-none" data-bs-toggle="tooltip" data-bs-title="Instagram"><i class="bi bi-instagram"></i></a></p>
+        <p> <a href="https://www.tiktok.com/fr/" class="text-decoration-none" data-bs-toggle="tooltip" data-bs-title="Tiktok">
+          <svg  xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tiktok" viewBox="0 0 16 16">   <path d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3V0Z"/> </svg>
+        </a></p>
+        <p><a href="https://www.linkedin.com/in/saad-rafiqul-9a964220a/" class="text-decoration-none" data-bs-toggle="tooltip" data-bs-title="Twitter"><i class="bi bi-twitter"></i></a></p>
+        <p><a href="https://www.instagram.com/mercecorp/" class="text-decoration-none" data-bs-toggle="tooltip" data-bs-title="Instagram"><i class="bi bi-instagram"></i></a></p>
       </div>
     </div>
     <p>© ShopNow - <a href="#">Mentions Légales</a></p>
