--- a/listings/templates/listings/boutique.html
+++ b/listings/templates/listings/boutique.html
@@ -69,12 +69,21 @@
                             <h5 id="aa{{ article.id }}" class="card-title">{{ article.name }}</h5>
                             <p class="card-text">{{ article.description }}</p>
                             <p class="price">{{ article.price }} €</p>
-                            <a href="{% url 'article-detail' article.id %}" class="btn btn-outline-secondary">
-                                En savoir plus
-                            </a>
-                            <button id="{{ article.id }}" class="btn ted btn-outline-secondary">
-                                <i class="bi bi-basket2-fill"></i>
-                            </button>                            
+                            <div class="row">
+                                <div class="col-12 col-md-9">
+                                    <a href="{% url 'article-detail' article.id %}" class="btn btn-outline-secondary">
+                                        En savoir plus
+                                    </a>
+                                </div>
+                                <div class="col-12 col-md-3">
+                                    <form action="" method="post">
+                                        {% csrf_token %}
+                                        <button value="{{ article.id }}" name="add-to-cart" class="btn btn-outline-secondary" type="submit">
+                                            <i class="bi bi-basket2-fill"></i>
+                                        </button>              
+                                    </form> 
+                                </div>
+                            </div>             
                         </div>
                     </div>
                 </div>
@@ -107,7 +116,6 @@
             </div>
         </div>
     </div>
-    
     <br>
 </section>
 {% endblock %}
