--- a/listings/templates/listings/panier.html
+++ b/listings/templates/listings/panier.html
@@ -2,42 +2,85 @@
 
 {% block content %}
 <section class="page">
-  <div class="row">
-      <div class="col-md-12">
-        <ul class="list-group">
-          <li class="list-group-item d-flex justify-content-between align-items-center">
-            Cras justo odio
-            <span class="badge badge-primary badge-pill">14</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between align-items-center">
-            Dapibus ac facilisis in
-            <span class="badge badge-primary badge-pill">2</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between align-items-center">
-            Morbi leo risus
-            <span class="badge badge-primary badge-pill">1</span>
-          </li>
-        </ul>
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a class="text-dark" href="{% url 'accueil' %}">Accueil</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Panier</li>
+    </ol>
+</nav>
+  <div class="container">
+    <h1 class="m-5">Mon panier</h1>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-md-3">
+        <span class="badge bg-secondary rounded-pill">
+          Nom du produit :
+        </span>
       </div>
+      <div class="col-12 col-md-3">
+        <span class="badge bg-primary rounded-pill">
+          Quantité :
+        </span>
+      </div>
+      <div class="col-12 col-md-3">
+        <span class="badge bg-success rounded-pill mb-3">
+          Prix unitaire :
+        </span>
+      </div>
+    </div>
+    {% for cartItem in cartItems %}
+      {% if cartItem.cart == cart %}
+      <div class="row">
+        <div class="col-12 col-md-3">
+          <p>{{ cartItem.article.name }}</p>
+        </div>
+        <div class="col-12 col-md-3">
+          {{cartItem.quantity}}
+        </div>
+        <div class="col-12 col-md-3">
+            {{ cartItem.article.price }} €
+        </div>
+        <div class="col-12 col-md-3">
+          <a href="{% url 'delete_item' cartItem.id %}" class="btn btn-outline-danger ">Supprimer cet article</a>
+        </div>
+      </div>
+      {% endif %}
+      {% endfor %}
+      <div class="row">
+        <div class="col-12 col-md-3 mt-3">
+          <span class="badge bg-secondary rounded-pill">
+            Total :
+          </span>
+        </div>
+        <div class="col-12 col-md-3 mt-3">
+        <span class="badge bg-primary rounded-pill">
+          {{ total_item }} produits
+        </span>
+      </div>
+      <div class="col-12 col-md-3 mt-3">
+        <span class="badge bg-success rounded-pill">
+          {{ total_price }} €
+        </span>
+      </div>
+      <div class="col-12 col-md-3 mt-3">
+      
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12 col-md-3 mt-3">
+
+      </div>
+      <div class="col-12 col-md-3 mt-3">
+        <a href="{% url 'boutique' %}" class="btn btn-primary">Continuer mes achats</a>
+      </div>
+      <div class="col-12 col-md-3 mt-3">
+        <a href="" class="btn btn-success">Commander</a>
+      </div>
+      <div class="col-12 col-md-3 mt-3">
+        <a href="{% url 'delete_all' %}" class="btn btn-danger">Supprimer mon panier</a>
+      </div>
+    </div>
   </div>
 </section>
-{% endblock %}
-
-{% block js %}
-<script type="text/javascript">
-  console.log('On teste');
-  var panier;
-  if (localStorage.getItem('panier') != null){
-    console.log("Le panier n'est pas nul !");
-    for (var article in localStorage) {
-      panier = article;
-      break;
-    }
-    for (produit in panier){
-      console.log(produit)
-      console.log("Sa quantité :");
-      console.log(panier[produit]);
-    }
-  }
-</script>
 {% endblock %}
