--- a/listings/templates/listings/article_detail.html
+++ b/listings/templates/listings/article_detail.html
@@ -25,9 +25,12 @@
                         <span class="bg-danger text-light p-2">Indisponible</span>
                     {% endif %}
                 </p>
-                <a href="#" class="btn btn-outline-dark">
-                    <i class="bi bi-basket2-fill fa-2x"></i> 
-                </a>
+                <form action="" method="post">
+                    {% csrf_token %}
+                    <button class="btn btn-outline-secondary" type="submit" name="add-to-cart">
+                        <i class="bi bi-basket2-fill fa-2x"></i> 
+                    </button>
+                </form>
             </div>
         </div>
     </div>
@@ -100,8 +103,8 @@
             <form action="" method="post">
                 {% csrf_token %}
                 {{ form.as_p }}
-                <input type="submit" value="Envoyer">
-              </form>
+                <input type="submit" value="Envoyer" class="btn btn-outline-secondary">
+            </form>
         </div>
     </div>
 </section>
