--- a/listings/templates/listings/header.html
+++ b/listings/templates/listings/header.html
@@ -2,7 +2,7 @@
     <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light" data-bs-theme="dark">
       <div class="container">
         <a class="navbar-brand" href="{% url 'accueil' %}">
-          <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Logo" width="30" height="24">
+          <img src="/media/images/Logo.png" alt="Logo" width="75" height="24">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
