--- a/listings/templates/listings/index.html
+++ b/listings/templates/listings/index.html
@@ -78,7 +78,7 @@
     <div class="row text-center">
         <div class="col-12 col-md-6 bg-image p-5">
             <h1 class="bg-dark bg-opacity-50 text-light rounded-3">Salle de bain</h1>
-            <a href="#" type="button" class="btn btn-secondary">Tout voir</a>
+            <a href="{% url 'boutique' %}?categorie=salle_de_bain" type="button" class="btn btn-secondary">Tout voir</a>
         </div>
         <div class="col-12 col-md-6 bg-image2 p-5">
             <h1 class="bg-dark bg-opacity-50 text-light rounded-3">Cuisine</h1>
